# operance

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  wrangler.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  command_failure.md  (+2 more)
demo/: phase0a_confirmation.txt  phase0a_replay.jsonl
examples/: __init__.py
packaging/: operance.desktop.in
scripts/: build_deb_package.sh  build_package_artifacts.sh  build_package_scaffolds.sh  build_release_artifacts.sh  build_rpm_package.sh  build_site.sh  bundle_python_runtime.py  check_installed_build_identity.py  check_installed_mvp_runtime.py  control_systemd_user_services.sh  install_linux_dev.sh  install_local_linux_app.sh  install_package_artifact.sh  install_packaging_tools.sh  install_systemd_user_service.sh  install_tts_assets.sh  install_voice_loop_user_config.sh  install_voice_loop_user_service.sh  install_wakeword_model_asset.sh  install_wayland_input_tools.sh  render_packaged_assets.sh  run_beta_readiness_gate.sh  run_beta_smoke.sh  run_checkout_smoke.sh  run_click_to_talk.sh  run_demo.sh  run_fedora_alpha_gate.sh  run_fedora_gate.sh  run_fedora_release_smoke.sh  run_installed_beta_smoke.sh  run_installed_desktop_smoke.sh  run_installed_package_smoke.sh  run_live_command_smoke.sh  run_mvp.sh  run_package_evidence_gate.sh  run_release_readiness_gate.sh  run_tray_app.sh  run_voice_loop.sh  setup.sh  tail_systemd_user_service_logs.sh  (+5 more)
site/: design-system.css  index.html  styles.css
tests/: conftest.py
(+240 files in other folders)
