[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operance"
version = "0.1.0"
description = "Turn intent into action on KDE/Wayland"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Operance" }]
keywords = ["desktop", "linux", "voice", "automation", "mcp", "wayland", "kde"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ui = ["PySide6"]
voice = ["moonshine-voice", "openwakeword", "kokoro-onnx", "soundfile"]

[project.scripts]
operance = "operance.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
